<resources>
    <string name="app_name">Space Explorer</string>
    <string name="space_explorer">Space Explorer</string>
    <string name="txvNomUtilisateur">Nom d\'utilisateur :</string>
    <string name="txvMotDePasse">Mot de passe :</string>
    <string name="edtNomUtilisateur"></string>
    <string name="edtMotDePasse"></string>
    <string name="btnConnexion">Connexion</string>
    <string name="msgMauvaisMotPasse">Mauvais mot de passe</string>
</resources>
